<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">БРС</string>
    <string name="action_settings">Settings</string>
    <string name="StudentScore">Баллы студента</string>
    <string name="Twenty">20</string>
    <string name="Nominal">Номинал</string>
    <string name="One">1.00</string>
    <string name="title_activity_about">О программе</string>
    <string name="MenuItem_About">О программе</string>
    <string name="About_AppName">Расчёт коэффициента и итоговой оценки по бально-рейтинговой системе</string>
    <string name="About_version">version *.*</string>
    <string name="About_SourceCodeLabel">Исходный код:\nhttps://github.com/BesuglovS/BRS2</string>
    <string name="Mian_StudentScore">Баллы студента</string>
    <string name="Main_OK">Ok</string>
    <string name="Main_Cancel">Отмена</string>
    <string name="Main_NominalScore">Номинал</string>
    <string name="ERROR">УЖАС</string>

</resources>
