<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ru.besuglovs.nu.brs.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:paddingLeft="20dp" android:paddingRight="20dp"
            android:baselineAligned="false">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_weight="1">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/StudentScore"
                    android:id="@+id/textView"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_weight="1">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:text="@string/Twenty" android:id="@+id/StudentScoreText"/>
            </LinearLayout>
        </LinearLayout>
        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/studentScore" android:layout_gravity="left|center_vertical" android:max="30"
            android:paddingLeft="10dp" android:paddingRight="10dp"
            android:longClickable="false"
            android:progress="1" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:id="@+id/linearLayout" android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:baselineAligned="false">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_weight="1">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/Nominal" android:id="@+id/textView2"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_weight="1">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Twenty"
                    android:id="@+id/NominalText"/>
            </LinearLayout>
        </LinearLayout>
        <SeekBar android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/Nominal"
            android:layout_gravity="left|center_vertical"
            android:max="30"
            android:focusableInTouchMode="false"
            android:paddingLeft="10dp" android:paddingRight="10dp"
            android:progress="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/One"
            android:id="@+id/Coeff" android:layout_gravity="center" android:textSize="80dp"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:baselineAligned="false"
            android:paddingBottom="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#ff0000" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:id="@+id/textViewMark2"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="2.00"
                    android:id="@+id/result2"
                    android:gravity="center"/>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView0"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:src="@drawable/arrow" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/layoutMark2"
                android:background="#ff0000">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:id="@+id/textViewMark22"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:textColor="#000000" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:id="@+id/textViewMark3"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:background="#ffff00"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/linearLayout1">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="3.00"
                    android:id="@+id/result3"
                    android:gravity="center"/>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:src="@drawable/arrow"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:focusableInTouchMode="false"
                android:id="@+id/layoutMark3"
                android:background="#ffff00">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:id="@+id/textViewMark32"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="4"
                    android:id="@+id/textViewMark4"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:background="#0000ff"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/linearLayout2">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="4.00"
                    android:id="@+id/result4"
                    android:gravity="center"/>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView1"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:src="@drawable/arrow"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/layoutMark4"
                android:background="#0000ff">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="4"
                    android:id="@+id/textViewMark42"
                    android:layout_row="2"
                    android:layout_column="2"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:id="@+id/textViewMark5"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:background="#00ff00"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/linearLayout3">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="5.00"
                    android:id="@+id/result5"
                    android:gravity="center"/>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:src="@drawable/arrow"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/layoutMark5"
                android:background="#00ff00">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:id="@+id/textViewMark52"
                    android:layout_row="3"
                    android:layout_column="2"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
